--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
     "express": "~4.16.1",
+    "express-validator": "^6.14.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.1",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.20"
