--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGODB_URI="mongodb+srv://morita:2$Hihihehe@finalproject.oxkpdhq.mongodb.net/top110albums"
+# MONGODB_URI="mongodb+srv://morita:2$Hihihehe@finalproject.oxkpdhq.mongodb.net/top110albums"
 PORT=8000
 JWT_SECRET_KEY="bi_mat"
